	(DONE) Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	(DONE) Add option to autorename point the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+


14-02-2011 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* One year release (from the idea to working plugin, thanks for all for the support)

	* src/treebrowser.c
		Completed file tracking functionality, now tracking and files that are not in the cached directories
			This is the last TODO point from the started idea. Today is it exactly one from the first release.
		Make default terminal for Windows always be "cmd"
		Fixed directory separator for when chrooting be G_DIR_SEPARATOR_S not always "/"


12-02-2011 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		When Windows detected, it is creating config file (if it needen) with Explorer for external viewer


10-02-2011 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Added function to close directory childrens (patch by Oliver Marks (#3175562), thanks)
		Replaced TreeBrowser`s hidden file check with the native filebrowser check (thanks to geany`s team),
			this may be fixing the bug #3157070 (Treebrowser plugin crashes Geany with files ending in ~)


14-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed nighty compilation error (reported by Enrico Tröger)


10-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* ChangeLog
		Update
	* README
		Update
	* src/treebrowser.c
		Fixed warning: ISO C90 forbids mixed declarations and code (in check_hidden())
		Fixed warning: 'return' with no value, in function returning non-void (in treebrowser_checkdir())
		Fixed compilation warning with strlen()
		Description changed (taken from ubuntu`s repos)


10-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>
